apps/services/media/jellyfin/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-internal
  labels:
    app: jellyfin
  annotations:
    kube-vip.io/vipHost: jellyfin
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8096
    protocol: TCP
  selector:
    app: jellyfin
  type: LoadBalancer
  loadBalancerIP: "192.168.1.143"
  loadBalancerClass: kube-vip.io/kube-vip-class
